🔒 Security: Add SSH keys to .gitignore and remove from tracking
  ✅ Added comprehensive security patterns to .gitignore
  🔒 Removed SSH private key from repository tracking
  ⚠️ SSH keys should never be committed to repositories

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,15 @@ recordings/
 *.wav
 *.mp3
 *.mp4
+
+# Security - SSH Keys and Certificates (NEVER commit these!)
+*.pem
+*.pem:Zone.Identifier
+*.key
+*.crt
+*.p12
+*.pfx
+id_rsa*
+id_ed25519*
+*.ssh
+voilavoicebookingvm_key*
