--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -20,6 +20,8 @@ jobs:
         username: ${{ secrets.VM_USERNAME }}
         key: ${{ secrets.VM_SSH_KEY }}
         port: 22
+        timeout: 600s
+        command_timeout: 600s
         script: |
           echo "🚀 Starting optimized Docker deployment..."
 
