--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,11 @@ services:
       - "8000:8000"
     environment:
       - PORT=8000
+    extra_hosts:
+      - "api.deepgram.com:host-gateway"
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     env_file:
       - .env
     restart: unless-stopped
@@ -36,4 +41,4 @@ services:
 
 networks:
   pipecat-network:
-    driver: bridge
+    driver: bridge2
