--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,8 @@
-pipecat-ai[daily,openai,silero,deepgram,elevenlabs]
-torch>=2.0.0
-torchaudio>=2.0.0
-deepgram-sdk
-cartesia
-requests>=2.32.5
-aiohttp>=3.8.0
-rapidfuzz>=3.0.0
-pydantic>=2.0.0
-fastapi>=0.100.0
-python-dotenv~=1.0.1
-loguru>=0.7.0
-charset_normalizer>=3.4.3
-urllib3>=2.5.0
-pipecat-ai-flows>=0.0.20
-anthropic>=0.67.0
-google-genai>=1.36.0
-python-json-logger>=3.3.0
-uvicorn>=0.36.0
-websockets
-numpy
-uvloop>=0.17.0
+# Development Requirements - Small, frequently changing dependencies
+# These rebuild quickly when changes are made
+
+# Cloud storage (your addition)
 azure-storage-blob>=12.19.0
+
+# Add future small dependencies here
+# Keep this file minimal for fast rebuilds
