--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,53 @@
-# Development Requirements - Small, frequently changing dependencies
-# These rebuild quickly when changes are made
+# All Requirements - Optimized with BuildKit Cache
+# First build: 4-6 hours | Next builds: 5-15 min (cache reused!)
 
-# Cloud storage (your addition)
+# ============================================
+# HEAVY PACKAGES (slow to download, but cached by BuildKit!)
+# ============================================
+
+# Core Pipecat with all extras
+pipecat-ai[daily,openai,silero,deepgram,elevenlabs,azure]
+pipecat-ai-flows==0.0.21
+
+# PyTorch (large downloads ~900MB total)
+torch==2.8.0
+torchaudio==2.8.0
+
+# AI Service SDKs
+deepgram-sdk==4.7.0
+openai==1.99.1
+anthropic==0.69.0
+google-genai==1.43.0
+
+# ============================================
+# WEB FRAMEWORK & NETWORKING
+# ============================================
+fastapi==0.119.0
+uvicorn==0.37.0
+websockets==15.0.1
+uvloop==0.21.0
+
+# ============================================
+# CORE LIBRARIES
+# ============================================
+requests==2.32.5
+aiohttp==3.13.0
+pydantic==2.12.0
+numpy==2.2.6
+python-dotenv==1.0.1
+loguru==0.7.3
+urllib3==2.5.0
+python-json-logger==4.0.0
+rapidfuzz==3.14.1
+
+# ============================================
+# ADDITIONAL SERVICES
+# ============================================
 azure-storage-blob>=12.19.0
+twilio
+redis
+pymysql
+aiomysql
 
-# Add future small dependencies here
-# Keep this file minimal for fast rebuilds
+# Total size: ~1.2GB of packages
+# BuildKit cache saves this locally after first download!
