Fix Azure deployment path and add Docker login to VM
- Changed deployment path from /home/azureuser/app to /home/azureuser/voilavoicebooking
- Added Docker Hub login on Azure VM before pulling image
- Fixes deployment errors: directory not found and pull access denied

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,8 +66,12 @@ jobs:
           username: ${{ env.AZURE_VM_USER }}
           key: ${{ secrets.AZURE_SSH_KEY }}
           script: |
-            cd /home/azureuser/app
-            
+            cd /home/azureuser/voilavoicebooking
+
+            # Login to Docker Hub (in case credentials expired)
+            echo "Logging in to Docker Hub..."
+            echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
             # Pull latest image
             echo "Pulling latest image..."
             docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
