--- a/nginx.conf
+++ b/nginx.conf
@@ -31,25 +31,22 @@ http {
 
         # WebSocket endpoint
         location /ws {
-            proxy_pass http://pipecat_backend;
-            
+            proxy_pass http://pipecat_backend/ws;
+
             # WebSocket headers
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
-            
+
             # Preserve original headers
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             # Disable buffering for real-time audio
             proxy_buffering off;
             proxy_cache off;
-            
-            # Keep connection alive
-            proxy_set_header Connection "keep-alive";
         }
 
         # Health check endpoint (aggregated)
