--- a/nginx.conf
+++ b/nginx.conf
@@ -31,7 +31,7 @@ http {
 
         # WebSocket endpoint
         location /ws {
-            proxy_pass http://pipecat_backend/ws;
+            proxy_pass http://pipecat_backend;
 
             # WebSocket headers
             proxy_http_version 1.1;
@@ -47,6 +47,11 @@ http {
             # Disable buffering for real-time audio
             proxy_buffering off;
             proxy_cache off;
+            
+            # WebSocket-specific timeouts
+            proxy_connect_timeout 7d;
+            proxy_send_timeout 7d;
+            proxy_read_timeout 7d;
         }
 
         # Health check endpoint (aggregated)
