Update .gitignore: Add MCP server, test files, and dev helper files
- Add .serena/ (MCP server directory)
- Add test_*.py (all test files)
- Add .envrc and activate.sh (development helper files)

--- a/.gitignore
+++ b/.gitignore
@@ -150,4 +150,12 @@ extra/
 
 # Development and testing files
 test.py
+test_*.py
 CLAUDE.md
+
+# MCP Server (Serena)
+.serena/
+
+# Development helper files
+.envrc
+activate.sh
