--- a/requirements.txt
+++ b/requirements.txt
@@ -49,5 +49,23 @@ redis
 pymysql
 aiomysql
 
+# ============================================
+# DASHBOARD API DEPENDENCIES
+# ============================================
+# PostgreSQL async driver (Supabase)
+asyncpg==0.30.0
+
+# Authentication & Security
+bcrypt==4.1.2
+
+# Email Service
+sendgrid==6.12.4
+python-http-client==3.3.7
+
+# Vector Database & Embeddings
+pinecone==7.0.1
+pinecone-plugin-assistant==0.2.0
+pinecone-plugin-interface==0.0.7
+
 # Total size: ~1.2GB of packages
 # BuildKit cache saves this locally after first download!
