fix: update Dockerfile to conditionally use npm install or npm ci based on package-lock existence

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -8,7 +8,9 @@ WORKDIR /app
 
 # Copy package files
 COPY info_frontend/package.json info_frontend/package-lock.json* ./
-RUN npm ci
+
+# Use npm install if package-lock doesn't exist, npm ci if it does
+RUN if [ -f package-lock.json ]; then npm ci; else npm install; fi
 
 # Rebuild the source code only when needed
 FROM base AS builder
