--- a/info_frontend/.gitignore
+++ b/info_frontend/.gitignore
@@ -31,7 +31,11 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
+.env.local
+.env.development.local
+.env.test.local
+# Allow .env.production to be committed (contains public API URL)
 
 # vercel
 .vercel
