--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,6 +142,9 @@ services:
 
   # Info Agent - Medical Information Assistant + Dashboard APIs
   info-agent:
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: rudyimhtpdev/voicebooking_piemo1:latest
     container_name: info-agent
     ports:
