fix: enhance deployment workflow with content hash generation and caching improvements

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,8 @@ jobs:
     outputs:
       backend: ${{ steps.changes.outputs.backend }}
       frontend: ${{ steps.changes.outputs.frontend }}
+      backend_hash: ${{ steps.hash.outputs.backend }}
+      frontend_hash: ${{ steps.hash.outputs.frontend }}
       version: ${{ steps.meta.outputs.version }}
     steps:
       - uses: actions/checkout@v4
@@ -47,6 +49,13 @@ jobs:
             echo "⏭️ Frontend unchanged - skipping build"
           fi
       
+      - name: Generate content hashes
+        id: hash
+        run: |
+          # Hash requirements.txt for cache key
+          echo "backend=$(sha256sum requirements.txt Dockerfile | sha256sum | cut -d' ' -f1)" >> $GITHUB_OUTPUT
+          echo "frontend=$(sha256sum info_frontend/package.json Dockerfile.frontend 2>/dev/null | sha256sum | cut -d' ' -f1 || echo 'none')" >> $GITHUB_OUTPUT
+      
       - name: Generate version tag
         id: meta
         run: |
@@ -62,6 +71,18 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: |
+            network=host
+            image=moby/buildkit:latest
+      
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: buildx-backend-${{ needs.detect-changes.outputs.backend_hash }}
+          restore-keys: |
+            buildx-backend-
       
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -77,10 +98,18 @@ jobs:
           tags: |
             ${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE }}:latest
             ${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE }}:${{ needs.detect-changes.outputs.version }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: |
+            type=local,src=/tmp/.buildx-cache
+            type=registry,ref=${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE }}:latest
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
           build-args: |
             BUILDKIT_INLINE_CACHE=1
+            BUILDKIT_PROGRESS=plain
+      
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
   build-frontend:
     needs: detect-changes
