--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,16 @@ http {
         server pipecat-agent-3:8000 max_fails=3 fail_timeout=30s;
     }
 
+    # Info Agent API backend
+    upstream info_agent_backend {
+        server info-agent:8081;
+    }
+
+    # Dashboard Frontend backend
+    upstream dashboard_backend {
+        server dashboard-frontend:3000;
+    }
+
     # WebSocket and connection settings
     map $http_upgrade $connection_upgrade {
         default upgrade;
@@ -29,7 +39,17 @@ http {
         proxy_read_timeout 3600s;
         send_timeout 3600s;
 
-        # WebSocket endpoint
+        # API endpoints - Info Agent (highest priority)
+        location /api/ {
+            proxy_pass http://info_agent_backend/api/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # WebSocket endpoint for voice agents
         location /ws {
             proxy_pass http://pipecat_backend;
 
@@ -57,8 +77,23 @@ http {
         # Health check endpoint (aggregated)
         location /health {
             access_log off;
-            return 200 "Nginx Load Balancer OK - 3 Agents Ready\n";
+            return 200 "Nginx Load Balancer OK - All Services Ready\n";
             add_header Content-Type text/plain;
+        }
+
+        # Dashboard Frontend - Default location (catch-all)
+        location / {
+            proxy_pass http://dashboard_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Next.js specific
+            proxy_buffering off;
         }
 
         # Status page for monitoring (optional)
