--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,120 +15,63 @@ env:
   AZURE_VM_USER: azureuser
 
 jobs:
-  detect-changes:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    outputs:
-      backend: ${{ steps.changes.outputs.backend }}
-      frontend: ${{ steps.changes.outputs.frontend }}
-      backend_hash: ${{ steps.hash.outputs.backend }}
-      frontend_hash: ${{ steps.hash.outputs.frontend }}
-      version: ${{ steps.meta.outputs.version }}
+    if: github.ref == 'refs/heads/main'
+    
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
       
-      - name: Detect what changed
-        id: changes
-        run: |
-          # Check if backend files changed
-          if git diff --name-only HEAD^ HEAD | grep -E '^(info_agent|config|flows|models|pipeline|services|utils|bot\.py|requirements\.txt|Dockerfile)'; then
-            echo "backend=true" >> $GITHUB_OUTPUT
-            echo "✅ Backend files changed - will rebuild"
-          else
-            echo "backend=false" >> $GITHUB_OUTPUT
-            echo "⏭️ Backend unchanged - skipping build"
-          fi
-          
-          # Check if frontend files changed
-          if git diff --name-only HEAD^ HEAD | grep -E '^(info_frontend|Dockerfile\.frontend)'; then
-            echo "frontend=true" >> $GITHUB_OUTPUT
-            echo "✅ Frontend files changed - will rebuild"
-          else
-            echo "frontend=false" >> $GITHUB_OUTPUT
-            echo "⏭️ Frontend unchanged - skipping build"
-          fi
-      
-      - name: Generate content hashes
-        id: hash
-        run: |
-          # Hash requirements.txt for cache key
-          echo "backend=$(sha256sum requirements.txt Dockerfile | sha256sum | cut -d' ' -f1)" >> $GITHUB_OUTPUT
-          echo "frontend=$(sha256sum info_frontend/package.json Dockerfile.frontend 2>/dev/null | sha256sum | cut -d' ' -f1 || echo 'none')" >> $GITHUB_OUTPUT
-      
-      - name: Generate version tag
+      - name: Detect Changes & Generate Version
         id: meta
         run: |
+          # Generate version
           echo "version=v$(date +%Y%m%d-%H%M%S)-$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-
-  build-backend:
-    needs: detect-changes
-    if: needs.detect-changes.outputs.backend == 'true'
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v4
+          
+          # Detect what changed
+          if git diff --name-only HEAD^ HEAD | grep -E '^(info_agent|config|flows|models|pipeline|services|utils|bot\.py|requirements\.txt|Dockerfile)'; then
+            echo "backend=true" >> $GITHUB_OUTPUT
+            echo "✅ Backend changed"
+          else
+            echo "backend=false" >> $GITHUB_OUTPUT
+            echo "⏭️ Backend unchanged"
+          fi
+          
+          if git diff --name-only HEAD^ HEAD | grep -E '^(info_frontend|Dockerfile\.frontend)'; then
+            echo "frontend=true" >> $GITHUB_OUTPUT
+            echo "✅ Frontend changed"
+          else
+            echo "frontend=false" >> $GITHUB_OUTPUT
+            echo "⏭️ Frontend unchanged"
+          fi
       
       - name: Set up Docker Buildx
+        if: steps.meta.outputs.backend == 'true' || steps.meta.outputs.frontend == 'true'
         uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: |
-            network=host
-            image=moby/buildkit:latest
-      
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: buildx-backend-${{ needs.detect-changes.outputs.backend_hash }}
-          restore-keys: |
-            buildx-backend-
       
       - name: Login to Docker Hub
+        if: steps.meta.outputs.backend == 'true' || steps.meta.outputs.frontend == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Build and push Backend
+      - name: Build and Push Backend
+        if: steps.meta.outputs.backend == 'true'
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE }}:latest
-            ${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE }}:${{ needs.detect-changes.outputs.version }}
-          cache-from: |
-            type=local,src=/tmp/.buildx-cache
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE }}:latest
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-          build-args: |
-            BUILDKIT_INLINE_CACHE=1
-            BUILDKIT_PROGRESS=plain
+            ${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE }}:${{ steps.meta.outputs.version }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       
-      - name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-
-  build-frontend:
-    needs: detect-changes
-    if: needs.detect-changes.outputs.frontend == 'true'
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: Build and push Frontend
+      - name: Build and Push Frontend
+        if: steps.meta.outputs.frontend == 'true'
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -136,21 +79,10 @@ jobs:
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE }}:latest
-            ${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE }}:${{ needs.detect-changes.outputs.version }}
+            ${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE }}:${{ steps.meta.outputs.version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-  deploy:
-    needs: [detect-changes, build-backend, build-frontend]
-    if: |
-      always() && 
-      !cancelled() &&
-      github.ref == 'refs/heads/main' &&
-      (needs.build-backend.result == 'success' || needs.build-backend.result == 'skipped') &&
-      (needs.build-frontend.result == 'success' || needs.build-frontend.result == 'skipped')
-    runs-on: ubuntu-latest
-    
-    steps:
+      
       - name: Deploy to Azure VM
         uses: appleboy/ssh-action@master
         with:
@@ -162,7 +94,23 @@ jobs:
 
             # Pull latest code
             echo "📥 Pulling latest code..."
+            
+            # Store old commit hash before pulling
+            OLD_COMMIT=$(git rev-parse HEAD)
             git pull origin main
+            NEW_COMMIT=$(git rev-parse HEAD)
+            
+            # Check if config files changed
+            if [ "$OLD_COMMIT" != "$NEW_COMMIT" ]; then
+              if git diff $OLD_COMMIT $NEW_COMMIT --name-only | grep -E '(nginx.conf|docker-compose.yml)'; then
+                echo "📝 Config files changed - will restart affected services"
+                CONFIG_CHANGED=1
+              else
+                CONFIG_CHANGED=0
+              fi
+            else
+              CONFIG_CHANGED=0
+            fi
 
             # Login to Docker Hub
             echo "🔐 Logging in to Docker Hub..."
@@ -224,6 +172,14 @@ jobs:
             
             # Create necessary directories
             mkdir -p logs/nginx
+            
+            # Restart services if config changed
+            if [ $CONFIG_CHANGED -eq 1 ]; then
+              echo "🔄 Restarting services with new configuration..."
+              docker-compose restart nginx-lb
+              docker-compose up -d --build --no-deps dashboard-frontend
+              sleep 5
+            fi
             
             # Deploy updates (zero-downtime with --no-deps)
             echo "🚀 Deploying services..."
@@ -291,21 +247,13 @@ jobs:
       - name: Deployment Summary
         if: always()
         run: |
-          echo "## 🚀 Deployment Summary" >> $GITHUB_STEP_SUMMARY
+          echo "## 🚀 Deployment Complete" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "- **Version**: ${{ needs.detect-changes.outputs.version }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Backend Changed**: ${{ needs.detect-changes.outputs.backend }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Frontend Changed**: ${{ needs.detect-changes.outputs.frontend }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Deployed to**: ${{ env.AZURE_VM_HOST }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Version**: ${{ steps.meta.outputs.version }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Backend**: ${{ steps.meta.outputs.backend == 'true' && '✅ Built' || '⏭️ Skipped' }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Frontend**: ${{ steps.meta.outputs.frontend == 'true' && '✅ Built' || '⏭️ Skipped' }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Endpoints:" >> $GITHUB_STEP_SUMMARY
-          echo "- Backend API: http://${{ env.AZURE_VM_HOST }}:8081" >> $GITHUB_STEP_SUMMARY
-          echo "- Dashboard: http://${{ env.AZURE_VM_HOST }}:8082" >> $GITHUB_STEP_SUMMARY
-          echo "- Booking: http://${{ env.AZURE_VM_HOST }}:8000" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Rollback:" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
-          echo "ssh azureuser@${{ env.AZURE_VM_HOST }}" >> $GITHUB_STEP_SUMMARY
-          echo "cd ~/voilavoicebooking" >> $GITHUB_STEP_SUMMARY
-          echo "./rollback.sh all" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "### Access URLs:" >> $GITHUB_STEP_SUMMARY
+          echo "- 🌐 **Dashboard**: http://${{ env.AZURE_VM_HOST }}:8000" >> $GITHUB_STEP_SUMMARY
+          echo "- 🔌 **API**: http://${{ env.AZURE_VM_HOST }}:8000/api" >> $GITHUB_STEP_SUMMARY
+          echo "- 📞 **Voice**: ws://${{ env.AZURE_VM_HOST }}:8000/ws" >> $GITHUB_STEP_SUMMARY
