--- a/nginx.conf
+++ b/nginx.conf
@@ -48,6 +48,16 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+        
+        # Health check for API (maps to info-agent health)
+        location /api/health {
+            proxy_pass http://info_agent_backend/health;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
         # WebSocket endpoint for voice agents
         location /ws {
