fix: nginx API routing, voice WebSocket auto-detect, login navigation

--- a/nginx.conf
+++ b/nginx.conf
@@ -40,8 +40,9 @@ http {
         send_timeout 3600s;
 
         # API endpoints - Info Agent (highest priority)
+        # Remove trailing slash to avoid double /api/api/
         location /api/ {
-            proxy_pass http://info_agent_backend/api/;
+            proxy_pass http://info_agent_backend/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -49,7 +50,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         
-        # Health check for API (maps to info-agent health)
+        # Health check for API
         location /api/health {
             proxy_pass http://info_agent_backend/health;
             proxy_http_version 1.1;
