fix: complete nginx routing, voice WebSocket, login navigation, and API URLs

--- a/nginx.conf
+++ b/nginx.conf
@@ -40,9 +40,8 @@ http {
         send_timeout 3600s;
 
         # API endpoints - Info Agent (highest priority)
-        # Remove trailing slash to avoid double /api/api/
         location /api/ {
-            proxy_pass http://info_agent_backend/;
+            proxy_pass http://info_agent_backend/api/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
