fix: update nginx.conf to remove info-agent and dashboard references
- Remove info_agent_backend upstream (unified into pipecat agents)
- Remove dashboard_backend upstream (moved to separate repo)
- Remove /api/ location blocks
- Simplify health check and root location
- Fix nginx crash: host not found in upstream 'info-agent:8081'

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,24 +3,14 @@ events {
 }
 
 http {
-    # Upstream configuration for 3 Pipecat bot containers
+    # Upstream configuration for 3 Pipecat unified agent containers
     upstream pipecat_backend {
         least_conn;  # Route to container with least active connections
-        
-        # 3 bot containers on internal ports
+
+        # 3 unified agent containers on internal ports
         server pipecat-agent-1:8000 max_fails=3 fail_timeout=30s;
         server pipecat-agent-2:8000 max_fails=3 fail_timeout=30s;
         server pipecat-agent-3:8000 max_fails=3 fail_timeout=30s;
-    }
-
-    # Info Agent API backend
-    upstream info_agent_backend {
-        server info-agent:8081;
-    }
-
-    # Dashboard Frontend backend
-    upstream dashboard_backend {
-        server dashboard-frontend:3000;
     }
 
     # WebSocket and connection settings
@@ -39,27 +29,7 @@ http {
         proxy_read_timeout 3600s;
         send_timeout 3600s;
 
-        # API endpoints - Info Agent (highest priority)
-        location /api/ {
-            proxy_pass http://info_agent_backend/api/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        # Health check for API
-        location /api/health {
-            proxy_pass http://info_agent_backend/health;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # WebSocket endpoint for voice agents
+        # WebSocket endpoint for voice agents (main endpoint)
         location /ws {
             proxy_pass http://pipecat_backend;
 
@@ -84,26 +54,18 @@ http {
             proxy_read_timeout 7d;
         }
 
-        # Health check endpoint (aggregated)
+        # Health check endpoint (returns 200 if nginx is up)
         location /health {
             access_log off;
-            return 200 "Nginx Load Balancer OK - All Services Ready\n";
+            return 200 "Lombardia Agent Load Balancer OK\n";
             add_header Content-Type text/plain;
         }
 
-        # Dashboard Frontend - Default location (catch-all)
+        # Default location (returns info about the service)
         location / {
-            proxy_pass http://dashboard_backend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Next.js specific
-            proxy_buffering off;
+            access_log off;
+            return 200 "Lombardia Healthcare Voice Agent - WebSocket endpoint: /ws\n";
+            add_header Content-Type text/plain;
         }
 
         # Status page for monitoring (optional)
