--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,11 @@ services:
     networks:
       - pipecat-network
     healthcheck:
-      test: ["CMD", "wget", "-q", "-O", "-", "http://localhost:8000/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8000/health"]
       interval: 10s
       timeout: 5s
       retries: 3
-      start_period: 10s
+      start_period: 5s
 
   # Pipecat Agent 1
   pipecat-agent-1:
