--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -162,9 +162,20 @@ jobs:
               sleep 5
             fi
             
-            # Deploy updates (zero-downtime with --no-deps)
+            # Deploy updates (smart detection for config vs code changes)
             echo "🚀 Deploying services..."
-            docker-compose up -d --no-deps
+
+            # Check if docker-compose.yml changed (requires full restart to avoid ContainerConfig bug)
+            if git diff --name-only $OLD_COMMIT HEAD | grep -q 'docker-compose.yml'; then
+              echo "📋 docker-compose.yml changed - performing full restart to avoid docker-compose v1.29.2 bug..."
+              docker-compose down
+              docker-compose up -d
+              echo "✅ Full restart complete"
+            else
+              echo "📦 Code-only changes - using zero-downtime update..."
+              docker-compose up -d --no-deps
+              echo "✅ Zero-downtime update complete"
+            fi
             
             # Wait for services to start
             echo "⏳ Waiting for services..."
