revert: use --no-deps for deployment
test if ContainerConfig error occurs again with --no-deps

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -164,7 +164,7 @@ jobs:
             
             # Deploy updates
             echo "🚀 Deploying services..."
-            docker-compose up -d
+            docker-compose up -d --no-deps
             echo "✅ Deployment complete"
             
             # Wait for services to start
