fix: use docker-compose down + up to avoid v1.29.2 ContainerConfig bug
- Replace docker-compose up -d with down + up sequence
- Avoids container recreation code path that triggers KeyError
- Completely removes old containers before creating new ones
- Resolves persistent ContainerConfig error in docker-compose v1.29.2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -162,8 +162,11 @@ jobs:
               sleep 5
             fi
             
-            # Deploy updates
+            # Deploy updates (use down + up to avoid docker-compose v1.29.2 recreation bug)
             echo "🚀 Deploying services..."
+            echo "⏬ Stopping old containers..."
+            docker-compose down
+            echo "⏫ Starting new containers..."
             docker-compose up -d
             echo "✅ Deployment complete"
             
