Clean up codebase and upgrade to GPT-4.1
- Remove unused extractCF.py (8,346 lines of tax code calculator)
- Remove sql_schema folder (database setup scripts, not needed in runtime)
- Remove AGENT_ROUTING_IMPLEMENTATION.md and info_agent/.gitignore
- Update Dockerfile to remove extractCF.py reference
- Add BridgeLombardia-main/ to .gitignore and .dockerignore
- Upgrade all LLM services to GPT-4.1 for better quality:
  * config/settings.py: gpt-4.1-mini → gpt-4.1
  * info_agent/services/call_data_extractor.py: gpt-4o-mini → gpt-4.1
  * services/llm_interpretation.py: gpt-4o-mini → gpt-4.1
- Add new deployment documentation files

--- a/.dockerignore
+++ b/.dockerignore
@@ -43,6 +43,9 @@ talkdeskbridge/
 # Frontend (moved to separate repository)
 info_frontend/
 
+# External project folders
+BridgeLombardia-main/
+
 # Build artifacts
 build/
 dist/
