--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,9 @@ talkdeskbridge/
 # Frontend (moved to separate repository)
 info_frontend/
 
+# External project folders
+BridgeLombardia-main/
+
 # Recordings and temporary files
 recordings/
 *.wav
